# ucVIS

criticalPointUncertainty-VIS24/: CMakeLists.txt  LoadEnsAndProcessByHistogram.cpp  LoadEnsAndProcessByMC.cpp  LoadEnsAndProcessByUniform.cpp  LoadWeatherProcessByMC.cpp  LoadWeatherProcessByUniform.cpp  README.md
criticalPointUncertainty-VIS24/install_scripts/: frontier_gpu.sh  mac.sh  mac_plugin_paraview.sh  settings.sh
criticalPointUncertainty-VIS24/pv-plugin/: CMakeLists.txt  UncertainCriticalPoints.xml  paraview.plugin
criticalPointUncertainty-VIS24/pv-plugin/UncertainCriticalPoints/: CMakeLists.txt  VTKToVTKm.cxx  VTKToVTKm.h  vtk.module  vtkCriticalPointsHistogram.cxx  vtkCriticalPointsHistogram.h  vtkEnsembleFieldToHistogramField.cxx  vtkEnsembleFieldToHistogramField.h
criticalPointUncertainty-VIS24/pythonScripts/: Gaussian-Uniform-Epanechnikov-SuperOptimizedFiveVariableMinimaProbability.ipynb  README.md  epanechnikovSuperOptimizedFiveVariableMinimaProbability.ipynb  histogramMinimaProbability.ipynb  maximaSuperOptimizedFiveVariableProbability.ipynb  minimaSuperOptimizedFiveVariableProbability.ipynb  saddleSuperOptimizedFiveVariableProbability.ipynb
criticalPointUncertainty-VIS24/ucvfilter/: CMakeLists.txt  CriticalPointsHistogram.cxx  CriticalPointsHistogram.h  EnsembleFieldToHistogramField.cxx  EnsembleFieldToHistogramField.h
criticalPointUncertainty-VIS24/ucvworklet/: CriticalPointMonteCarlo.hpp  CriticalPointWorklet.hpp  CriticalPointWorkletAvoidOverflow.hpp  ExtractMinMaxByErr.hpp  ExtractMinMaxOfPoint.hpp
criticalPointUncertainty-VIS24/ucvworklet/linalg/EasyLinalg_bak/: basic.h  eigen.h  kde.h  ucv_liag.h
criticalPointUncertainty-VIS24/ucvworklet/linalg/StaticLinalg/: mvgsample.cpp  test_ucv_matrix_static_4by4.cpp  test_ucv_matrix_static_8by8.cpp  ucv_matrix.h  ucv_matrix_static_3by3.h  ucv_matrix_static_4by4.h  ucv_matrix_static_8by8.h  ucv_matrix_vtkm.h
criticalPointUncertainty-VIS24/ucvworklet/linalg/python_test/: exmaple_mvsample.py  qr_simple.py
criticalPointUncertainty-VIS24/ucvworklet/linalg/trygsl/: cstm_gsl.hpp  sample_gsl.cpp  temp.py  test_gsl_4by4.cpp
isosurface-uncertainty-vis/correlated_Gaussian/: CMakeLists.txt  ContourVariance.cxx  ContourVariance.h  Readme.txt  run-contour.cxx
isosurface-uncertainty-vis/crossing_probability/: CMakeLists.txt  MVGaussianTemp.hpp  compute-crossing-probability.cxx
isosurface-uncertainty-vis/crossing_probability/linalg/: test_ucv_matrix_static_4by4.cpp  ucv_matrix.h  ucv_matrix_static_4by4.h  ucv_matrix_static_8by8.h  ucv_matrix_vtkm.h
isosurface-uncertainty-vis/eigen_based_crossing_probability/: CMakeLists.txt  EntropyAdaptiveEigens.hpp  ExtractingMeanStdev.hpp  eigen-based-compute-crossing-probability.cxx
isosurface-uncertainty-vis/eigen_based_crossing_probability/linalg/: README.md  test_ucv_matrix.cpp  test_ucv_matrix_static_3by3.cpp  test_ucv_matrix_static_8by8.cpp  ucv_matrix_static_3by3.h
isosurface-uncertainty-vis/eigen_based_crossing_probability/linalg/python_test/: exmaple_mvsample.py  qr_simple.py
isosurface-uncertainty-vis/independent_Gaussian/: CMakeLists.txt  ContourVariance.cxx  ContourVariance.h  Readme.txt  gaussian_distribution.cxx  gaussian_distribution.h  run-contour.cxx
isosurface-uncertainty-vis/independent_uniform/: CMakeLists.txt  ContourVariance.cxx  ContourVariance.h  Readme.txt  gaussian_distribution.h  run-contour.cxx
